--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-epic-spinners": "^0.3.0",
+    "react-loadable": "^5.5.0",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3"
   },
@@ -32,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-loadable": "^5.5.1"
   }
 }
